# Frappe-Bench-Manager

./: README.md  pyproject.toml
frappe_bench_manager/: app.py
frappe_bench_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
